--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <svg width="500" height="310">
 	<polygon points="100,10 40,198 190,78 10,78 160,198" fill="lime" stroke="purple" stroke-width="5" fill-rule="evenodd" />
 
-	<circle cx="250" cy="100" r="45" stroke="green" stroke-width="4" fill="blue" />
+	<circle cx="250" cy="150" r="45" stroke="green" stroke-width="4" fill="yellow" />
 
 
 	<rect x="310" y="10" rx="20" ry="20" width="180" height="180" fill="red" stroke="black" stroke-width="5" />
